// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager as used with CommentForm (default case) when empty 1`] = `""`;

exports[`AttachmentManager as used with CommentForm (default case) when loading 1`] = `<Fragment />`;

exports[`AttachmentManager as used with CommentForm (default case) when loading, with attachments 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        },
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="comment"
    uploadAttachmentPending={true}
  />
  <FileManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        },
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="comment"
    uploadAttachmentPending={true}
  />
</Fragment>
`;

exports[`AttachmentManager as used with CommentForm (default case) with attachments 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        },
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="comment"
  />
  <FileManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        },
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="comment"
  />
</Fragment>
`;

exports[`AttachmentManager as used with PostEditor (showLabel, showLoading, showAddButtons) when empty 1`] = `""`;

exports[`AttachmentManager as used with PostEditor (showLabel, showLoading, showAddButtons) when loading 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachments={Array []}
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    showLabel={true}
    showLoading={true}
    showsAddButton={true}
    switchAttachments={[Function]}
    type="post"
    uploadAttachmentPending={true}
  />
  <FileManager
    addAttachment={[Function]}
    attachments={Array []}
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    showLabel={true}
    showLoading={true}
    showsAddButton={true}
    switchAttachments={[Function]}
    type="post"
    uploadAttachmentPending={true}
  />
</Fragment>
`;

exports[`AttachmentManager as used with PostEditor (showLabel, showLoading, showAddButtons) when loading, with attachments 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        },
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    showLabel={true}
    showLoading={true}
    showsAddButton={true}
    switchAttachments={[Function]}
    type="post"
    uploadAttachmentPending={true}
  />
  <FileManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        },
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    showLabel={true}
    showLoading={true}
    showsAddButton={true}
    switchAttachments={[Function]}
    type="post"
    uploadAttachmentPending={true}
  />
</Fragment>
`;

exports[`AttachmentManager as used with PostEditor (showLabel, showLoading, showAddButtons) with attachments 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        },
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    showLabel={true}
    showLoading={true}
    showsAddButton={true}
    switchAttachments={[Function]}
    type="post"
  />
  <FileManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        },
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    showLabel={true}
    showLoading={true}
    showsAddButton={true}
    switchAttachments={[Function]}
    type="post"
  />
</Fragment>
`;

exports[`AttachmentManager when attachmentType "file" with attachments (of both types), when loading 1`] = `
<Fragment>
  <FileManager
    addAttachment={[Function]}
    attachmentType="file"
    attachments={
      Array [
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        },
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="anything"
    uploadAttachmentPending={true}
  />
</Fragment>
`;

exports[`AttachmentManager when attachmentType "image" with attachments (of both types), when loading 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachmentType="image"
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        },
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="anything"
    uploadAttachmentPending={true}
  />
</Fragment>
`;

exports[`AttachmentManager when attachmentType not provided with attachments (of both types), when loading 1`] = `
<Fragment>
  <ImageManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        },
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="anything"
    uploadAttachmentPending={true}
  />
  <FileManager
    addAttachment={[Function]}
    attachments={
      Array [
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        },
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        },
      ]
    }
    clearAttachments={[Function]}
    id="new"
    loadAttachments={[Function]}
    removeAttachment={[Function]}
    setAttachments={[Function]}
    switchAttachments={[Function]}
    type="anything"
    uploadAttachmentPending={true}
  />
</Fragment>
`;

exports[`FileManager matches last snapshot 1`] = `
<div
  data-stylename="file-manager"
>
  <div
    data-stylename="section-label"
  >
    Files
  </div>
  <div
    data-stylename="file-previews"
  >
    <FilePreview
      attachment={
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing1.pdf",
        }
      }
      key="0"
      removeFile={[Function]}
    />
    <FilePreview
      attachment={
        Object {
          "attachmentType": "file",
          "url": "https://nowhere/thing2.xls",
        }
      }
      key="1"
      removeFile={[Function]}
    />
    <div
      data-stylename="loading-file"
    >
      Loading...
    </div>
    <Connect(UploadAttachmentButton)
      attachmentType="file"
      data-stylename="add-file-row"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <div
        data-stylename="add-file"
      >
        <span
          data-stylename="add-file-plus"
        >
          +
        </span>
         Add File
      </div>
    </Connect(UploadAttachmentButton)>
  </div>
</div>
`;

exports[`FilePreview matches last snapshot 1`] = `
<div
  data-stylename="file-preview"
>
  <Icon
    data-stylename="icon-document"
    name="Document"
  />
  <div
    data-stylename="file-name"
  >
    foo.pdf
  </div>
  <div
    data-stylename="file-size"
  >
    23.3mb
  </div>
  <Icon
    data-stylename="remove-file"
    name="Ex"
    onClick={[Function]}
  />
</div>
`;

exports[`ImageManager matches last snapshot 1`] = `
<div
  data-stylename="image-manager"
>
  <div
    data-stylename="section-label"
  >
    Images
  </div>
  <div
    data-stylename="image-previews"
  >
    <DropTarget(DragSource(ImagePreview))
      attachment={
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/foo.png",
        }
      }
      key="0"
      position={0}
      removeImage={[Function]}
    />
    <DropTarget(DragSource(ImagePreview))
      attachment={
        Object {
          "attachmentType": "image",
          "url": "https://nowhere/bar.jpg",
        }
      }
      key="1"
      position={1}
      removeImage={[Function]}
    />
    <div
      data-stylename="add-image"
    >
      <Loading />
    </div>
    <Connect(UploadAttachmentButton)
      attachmentType="image"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <div
        data-stylename="add-image"
      >
        +
      </div>
    </Connect(UploadAttachmentButton)>
  </div>
</div>
`;

exports[`ImagePreview matches last snapshot 1`] = `
<div
  data-stylename="image-preview"
>
  <div
    data-stylename="image"
    style={
      Object {
        "backgroundImage": "url(https://nowhere/foo.zng)",
      }
    }
  >
    <Icon
      data-stylename="remove-image"
      name="Ex"
      onClick={[Function]}
    />
    <div
      data-stylename="drag-preview"
    />
  </div>
</div>
`;
